--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     	</style>
     </head>
     <body>
-    	<iframe src="https://share.streamlit.io/messias519/redcalc/main/app.py>"
+    	<iframe src="https://share.streamlit.io/messias519/redcalc/main/app.py"
     			frameborder="0"
     			marginheight="0"
     			marginwidth="0"
